	PR other/49533 	* cgraphunit.c (assemble_thunks_and_aliases): Force alias to be output.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@178810 138bc75d-0d04-0410-961f-82ee72b054a4